<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m A Button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="LoginText">Login</string>
    <string name="LoginName">login name</string>
    <string name="CheckBox">CheckBox</string>
    <string name="RadioButton">RadioButton</string>
    <string name="Enable_Something">Enable Something</string>
    <string name="Password">Password</string>
</resources>
