<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/GridLayout"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_alignParentTop="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_below="@+id/GridLayout"
            android:layout_marginStart="10dp"
            android:id="@+id/radioButton"
            android:text="@string/RadioButton"
            android:gravity="fill"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:text="@string/CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="fill"
            android:id="@+id/checkBox" />

        <Switch
            android:text="@string/Enable_Something"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="fill"
            android:id="@+id/switch1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:layout_columnWeight="1"
            android:gravity="fill"
            android:id="@+id/imageButton" />
    </GridLayout>

</RelativeLayout>
